<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	
	<groupId>com.example</groupId>
	<artifactId>handle-manager</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>handle-manager</name>
	<description>API for adding handle records</description>
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <spring.cloud-version>2021.0.3</spring.cloud-version>
		<sonar.organization>dissco</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.coverage.jacoco.xmlReportPaths>../app-it/target/site/jacoco-aggregate/jacoco.xml
		</sonar.coverage.jacoco.xmlReportPaths>
	</properties>
	
	<dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-dependencies</artifactId>
            <version>${spring.cloud-version}</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
    </dependencies>
	</dependencyManagement>
	
	<dependencies>	
		<!--1. Spring Boot Dependencies -->	
		<dependency>
		    <groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-autoconfigure</artifactId>
		</dependency>

		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-cache</artifactId>
		</dependency> 
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.postgresql</groupId>
    		<artifactId>postgresql</artifactId>
	    	<scope>runtime</scope>
		</dependency>
		
		<!-- 2. Spring Cloud/Feign Dependencies -->
		<dependency>
    		<groupId>org.springframework.cloud</groupId>
		    <artifactId>spring-cloud-starter-bootstrap</artifactId>
		</dependency>
		<dependency>
        	<groupId>org.springframework.cloud</groupId>
        	<artifactId>spring-cloud-starter-config</artifactId>
    	</dependency>
		<dependency>
		    <groupId>org.springframework.cloud</groupId>
    		<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>
		<dependency>
      		<groupId>io.github.openfeign</groupId>
      		<artifactId>feign-okhttp</artifactId>
      	</dependency> 
      	<dependency>
    		<groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <scope>test</scope>
		</dependency>
		
		<!-- 3. Handle Client Dependencies -->

    	<dependency>
    		<groupId>com.google.code.gson</groupId>
    		<artifactId>gson</artifactId>
    		<scope>compile</scope>
		</dependency>
		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		</dependency>
		<dependency>
		    <groupId>javax.annotation</groupId> <!--@PostConstruct annotation -->
    		<artifactId>javax.annotation-api</artifactId>
		</dependency>
	
		<!--4. Testing Dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>  <!-- Unit testing -->
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
    		<groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		</dependency>
		<dependency>
   			<groupId>org.mockito</groupId>
   			<artifactId>mockito-core</artifactId>
   		</dependency>
		 <dependency>
		    <groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
    		<groupId>org.mockito</groupId>
		    <artifactId>mockito-inline</artifactId>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>	
		    <exclusions>
        		<exclusion>
            	<groupId>com.vaadin.external.google</groupId>
            	<artifactId>android-json</artifactId>
        	</exclusion>
    	</exclusions>
		</dependency>
		
		<!--Other Library Dependencies -->
        <dependency>
			<groupId>org.projectlombok</groupId> <!-- Quality of Life Annotations (e.g. @Data) -->
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
    		<groupId>com.fasterxml.jackson.core</groupId>  <!-- JSON Mapper -->
    		<artifactId>jackson-databind</artifactId>
    	</dependency>
    	<dependency>
		    <groupId>org.glassfish.jersey.bundles</groupId> <!-- Response Package 1-->
    		<artifactId>jaxrs-ri</artifactId>
		</dependency>
		<dependency>
    		<groupId>org.glassfish.jersey.core</groupId> <!-- Response Package 2-->
    		<artifactId>jersey-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20220320</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
	</build>

</project>
